--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <body>
 
     <!-- inizio header -->
-    <header>
+     <header>
+         <h1>Incrementa and Decremental Support Vector Machine Learining</h1>
+         <hr>
 
-    </header>
+     </header>
     <!-- fine header -->
 
     <!-- inizio main -->
-    <main>
+     <main>
 
-    </main>
+     </main>
     <!-- fine main -->
 
     <!-- inizio footer -->
-    <footer>
+     <footer>
 
-    </footer>
+     </footer>
     <!-- fine footer -->
     
 </body>
